feat(event): able to delete job
